2020-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	* configure.ac: Fix double brackets in my email address.

2020-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	Change the ChangeLog over to tabs. VIM highlights all of the spaces,
	and tabs are cool.

	* ChangeLog: Convert all leading spaces to tabs.
	* .editorconfig (ChangeLog): Specify tabs in the ChangeLog instead of
	spaces.

2020-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	The editorconfig was falling out of date.

	* .editorconfig (Makefile.am): Correct outdated Makefile.in rule to
	apply to Automake files instead.
	* .editorconfig (ChangeLog): Clarify to use eight spaces.

2020-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	There's no need for the Makefile stub, as it was not documented
	anywhere and complicates the git repo. It also dies in a
	maintainer-clean.

	The solution is to type `autoreconf --install' instead of
	`make'; it doesn't give the false illusion that you can avoid
	autoconf. Autoconf will always find (and haunt) you.

	* Makefile.am: Remove include of Makefile.common
	* Makefile.common: Remove entirely.
	* Makefile: Remove Makefile.common stub.

2020-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	* HACKING: Add contributing guide.

2021-01-11  thatlittlegit  <personal@thatlittlegit.tk>
	* atc.1: Add a manual page.
	* Makefile.am: Install the manual page automatically.

2021-01-10  thatlittlegit  <personal@thatlittlegit.tk>
	* ChangeLog: Create this changelog! Now this is meta.

2021-01-10  thatlittlegit  <personal@thatlittlegit.tk>
	* atc.c: Put logic for getting nanosecond time and sleeping n
	nanoseconds into their own functions. These functions are ifdef'd
	to call the best libc function for the job.
	* atc.c: Set clock_gettime/nanosleep as default functions with no
	config.h.
	* configure.ac: Add detection for clock_gettime, gettimeofday,
	nanosleep, and usleep.

2021-01-09  thatlittlegit  <personal@thatlittlegit.tk>