@@ -4,7 +4,8 @@
 .Dd 2021-01-11
 .Dt ATC 1
 .Sh NAME
-.Nm atc
+.Nm atc ,
+.Nm second_align
 .Nd exits at the end of a second
 .\"
 .\"
@@ -15,6 +16,9 @@
 .Op Fl -version
 .Op Cm --early
 .Op Cm --early-ns
+.Pp
+second_align is a synonym, to avoid clashing with
+.Xr atc 6 .
 .\"
 .\"
 .\"
